- bug [history] Do not save too big queries in history 
- [security] Do not show version info on login screen 
- bug #2018595 [import] Potential data loss on import resubmit 
- patch #2020630 [export] Safari and timedate, thanks to Sebastian Mendel,
  Isaac Bennetch and Jürgen Wind 
- bug #2022182 [import, export] Import/Export fails because of Mac files 

2.11.7.1 (2008-07-15)
- bug [security] XSRF/CSRF by manipulating the db,
  convcharset and collation_connection parameters,
  thanks to YGN Ethical Hacker Group

2.11.7.0 (2008-06-23)
- bug #1908719 [interface] New field cannot be auto-increment and primary key 
- [dbi] Incorrect interpretation for some mysqli field flags 
- bug #1910621 [display] part 1: do not display a TEXT utf8_bin as BLOB
  (fixed for mysqli extension only)
- [interface] sanitize the after_field parameter,
  thanks to Norman Hippert
- [structure] do not remove the BINARY attribute in drop-down 
- bug #1955386 [session] Overriding session.hash_bits_per_character 
- [interface] sanitize the table comments in table print view, 
  db print view and db data dictionary, thanks to Norman Hippert
- bug #1939031 Auto_Increment selected for TimeStamp by Default
- patch #1957998 [display] No tilde for InnoDB row counter when we know
  it for sure, thanks to Vladyslav Bakayev - dandy76 
- bug #1955572 [display] alt text causes duplicated strings
- bug #1762029 [interface] Cannot upload BLOB into existing row 
- bug #1981043 [export] HTML in exports getting corrupted,
  thanks to Jason Judge - jasonjudge
- bug #1936761 [interface] BINARY not treated as BLOB: update/delete issues 
- protection against XSS when register_globals is on and .htaccess has
  no effect, thanks to Tim Starling
- bug #1996943 [export] Firefox 3 and .sql.gz (corrupted); detect Gecko 1.9,
  thanks to Jürgen Wind - windkiel

2.11.6.0 (2008-04-29)
- bug #1903724 [interface] Displaying of very large queries in error message 