@@ -26,6 +26,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - patch #2020630 [export] Safari and timedate, thanks to Sebastian Mendel,
   Isaac Bennetch and Jürgen Wind 
 - bug #2022182 [import, export] Import/Export fails because of Mac files 
+- [security] protection against cross-frame scripting and
+  new directive AllowThirdPartyFraming, thanks to YGN Ethical Hacker Group
 
 2.11.7.1 (2008-07-15)
 - bug [security] XSRF/CSRF by manipulating the db,
